# notify_sender

./: README.md  logger.py  main.py  pyproject.toml  requirements.txt
notify_manager/: manager.py
notify_manager/config/: config.py
notify_manager/senders/: base.py  email.py  sms.py  tg.py
